2.区域分析模块权限管理 3.时间筛选问题解决 4.极光客流特征模块画像接口更改，做正确对接（接口参数pid：原本值area_id改成project_id） 5.解决不必要的强制刷新bug 6.普通用户登录信息更改，点击操作反馈“无权限，联系管理员” 7.用户项目信息增加表单列（项目个数） 8.解决用户项目信息增加项目---全部删除--再次增加出现报错bug 1.360浏览器兼容模式项目模块管理不出现bug 1.客户来源极光改变接口数据，改变视图，增加了lycharts.js

--- a/src/index.html
+++ b/src/index.html
@@ -106,5 +106,7 @@
 <script src="../libs/zTree/jquery.ztree.all.min.js"></script>
 
 
+<script src="../libs/lycharts.js"></script>
+
 </body>
 </html>
