--- a/src/tpl/home.html
+++ b/src/tpl/home.html
@@ -131,7 +131,7 @@
 
 <style>
     .m_home-logo>img{
-        width: 180%;
+        width: 180px;
     }
     .container {
         width: 100% !important;
