--- a/src/tpl/izonev/blocks/header.html
+++ b/src/tpl/izonev/blocks/header.html
@@ -3,7 +3,7 @@
   <div class="col-xs-12 m_height">
     <a ui-sref="access.home">
       <div class="m_home-logo">
-        <img src="img/logo.jpg" alt="">
+        <img src="img/logo.png" alt="">
       </div>
     </a>
 
@@ -57,7 +57,7 @@
   }
 
   .m_home-logo > img {
-    width: 180%;
+    width: 180px;
   }
 
   .m_height {
