--- a/src/tpl/izonev/blocks/header-home.html
+++ b/src/tpl/izonev/blocks/header-home.html
@@ -2,7 +2,7 @@
     <div class="col-xs-12 m_height">
         <a ui-sref="access.home">
             <div class="m_home-logo">
-                <img src="img/logo.jpg" alt="">
+                <img src="img/logo.png" alt="">
             </div>
         </a>
         <div class="m_exit">
@@ -49,7 +49,7 @@
     }
 
     .m_home-logo > img {
-        width: 180%;
+        width: 180px;
     }
 
     .m_height {
