--- a/src/tpl/izonev/blocks/header-userAdmin.html
+++ b/src/tpl/izonev/blocks/header-userAdmin.html
@@ -3,7 +3,7 @@
 <div class="m_row">
   <a ui-sref="access.home">
     <div class="m_home-logo">
-      <img src="img/logo.jpg" alt="">
+      <img src="img/logo.png" alt="">
     </div>
   </a>
   <div class="m_box3">
@@ -28,7 +28,7 @@
   }
 
   .m_home-logo > img {
-    width: 180%;
+    width: 180px;
   }
   .m_row{
     text-align: center;
@@ -63,7 +63,7 @@
     <div class="col-xs-12 m_height">
         <a ui-sref="access.home">
             <div class="m_home-logo">
-                <img src="img/logo.jpg" alt="">
+                <img src="img/logo.png" alt="">
             </div>
         </a>
 
@@ -104,7 +104,7 @@
     }
 
     .m_home-logo > img {
-        width: 180%;
+        width: 180px;
     }
 
     .m_height {
