--- a/src/tpl/izonev/userAdmin/userAdmin_info.html
+++ b/src/tpl/izonev/userAdmin/userAdmin_info.html
@@ -6,10 +6,10 @@
             </a>
             <div class="clear m-b">
                 <div class="m-b m-t-sm">
-                    <span class="h3 text-black">liangxuan</span>
+                    <span class="h3 text-black">{{userRName}}</span>
                     <small class="m-l">中国,北京</small>
                 </div>
-                <a href class="btn btn-sm btn-success btn-rounded">管理员</a>
+                <a href class="btn btn-sm btn-success btn-rounded">{{identity}}</a>
             </div>
         </div>
         <div class="form-group">
@@ -25,12 +25,6 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="col-lg-2 control-label">创建时间</label>
-            <div class="col-lg-10">
-                <input type="text" class="form-control" placeholder="" disabled value="{{dataS.createtime}}">
-            </div>
-        </div>
-        <div class="form-group">
             <label class="col-lg-2 control-label">手机号</label>
             <div class="col-lg-10">
                 <input type="text" class="form-control" placeholder="" disabled value="{{dataS.phone}}">
@@ -40,6 +34,12 @@
             <label class="col-lg-2 control-label">邮箱</label>
             <div class="col-lg-10">
                 <input type="text" class="form-control" placeholder="" disabled value="{{dataS.email}}">
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-lg-2 control-label">创建时间</label>
+            <div class="col-lg-10">
+                <input type="text" class="form-control" placeholder="" disabled value="{{dataS.createtime}}">
             </div>
         </div>
 
