--- a/src/tpl/izonev/userAdmin/userAdmin_userList.html
+++ b/src/tpl/izonev/userAdmin/userAdmin_userList.html
@@ -22,41 +22,41 @@
         <div class="form-group">
             <label class="col-lg-2 control-label">用户名</label>
             <div class="col-lg-10">
-                <input type="text" class="form-control" placeholder="" disabled value="{{panelData.username}}">
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-lg-2 control-label">创建时间</label>
-            <div class="col-lg-10">
-                <input type="text" class="form-control" placeholder="" disabled value="{{panelData.createtime}}">
+                <input type="text" class="form-control" placeholder="" disabled id="m_username">
             </div>
         </div>
         <div class="form-group">
             <label class="col-lg-2 control-label">所属公司</label>
             <div class="col-lg-10 bitian-box">
                 <span class="m_company-bitian">必填</span>
-                <input type="text" class="form-control" placeholder="" value="{{panelData.company}}" id="m_company">
+                <input type="text" class="form-control" placeholder="" id="m_company">
             </div>
         </div>
         <div class="form-group">
             <label class="col-lg-2 control-label">修改密码</label>
             <div class="col-lg-10 bitian-box">
                 <span>必填</span>
-                <input type="text" class="form-control" placeholder="" value="{{panelData.password}}" id="m_password">
+                <input type="text" class="form-control" placeholder="" id="m_password">
             </div>
         </div>
         <div class="form-group">
             <label class="col-lg-2 control-label">手机号</label>
             <div class="col-lg-10 bitian-box">
                 <span>必填</span>
-                <input type="text" class="form-control" placeholder="" value="{{panelData.phone}}" id="m_tpl">
+                <input type="text" class="form-control" placeholder="" id="m_tpl">
             </div>
         </div>
         <div class="form-group">
             <label class="col-lg-2 control-label">邮箱</label>
             <div class="col-lg-10 bitian-box">
                 <span>必填</span>
-                <input type="text" class="form-control" placeholder="" value="{{panelData.email}}" id="m_email">
+                <input type="text" class="form-control" placeholder="" id="m_email">
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-lg-2 control-label">创建时间</label>
+            <div class="col-lg-10">
+                <input type="text" class="form-control" placeholder="" disabled id="m_createtime">
             </div>
         </div>
     </div>
