--- a/src/tpl/izonev/area/realtime-wifi.html
+++ b/src/tpl/izonev/area/realtime-wifi.html
@@ -1,19 +1,56 @@
 <div class="hbox hbox-auto-xs hbox-auto-sm" ng-controller="realtimewifiCtrl">
     <div class="col">
-        <div class="bg-light lter b-b wrapper-md" ng-style="app.settings.bgLight">
-            <div class="row">
-                <div class="col-sm-8 col-xs-12">
-                    <h3 class="m-n font-bold h3 text-black hidden-xs" ng-style="app.settings.fontColor">实时分析</h3>
-                </div>
-                <div class="col-sm-4 text-right hidden-xs">
-                    <div class="inline m-r text-left">
-                        <div class="m-b-xs inline"><span class="text-muted" ng-style="app.settings.fontColor">{{clock.now}}</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="app-aside hidden-xs {{app.settings.asideColor}}" style="margin-top: 20px">
+            <nav ui-nav class="navi">
+                <!-- list -->
+                <ul class="nav">
+                    <li class="hidden-folded padder m-t m-b-sm text-muted text-xs">
+                        <span></span>
+                    </li>
+                    <!--项目名称-->
+                    <li>
+                        <a>
+                            <i class="glyphicon glyphicon-briefcase icon"></i>
+                            <span class="font-bold"> {{project_name}}</span>
+                        </a>
+                    </li>
+                    <li class="line dk"></li>
+
+                    <!--实时分析-->
+                    <li ui-sref-active="active">
+                        <a href="#/fulls/realtimewifi">
+                            <!--<i class="glyphicon glyphicon-stats icon text-primary-dker"></i>-->
+                            <i class="glyphicon glyphicon-calendar icon text-info-dker"></i>
+                            <span class="font-bold">实时分析</span>
+                        </a>
+                    </li>
+                    <li class="line dk"></li>
+
+                    <!--总体分析-->
+                    <li ui-sref-active="active">
+                        <a href="#/overall/statistical">
+                            <!--<i class="glyphicon glyphicon-stats icon text-primary-dker"></i>-->
+                            <i class="glyphicon glyphicon-th-large icon text-success"></i>
+                            <span class="font-bold">总体分析</span>
+                        </a>
+                    </li>
+                    <li class="line dk"></li>
+
+                    <!--区域分析-->
+                    <li ui-sref-active="active" >
+                        <a href="#/fulls/areaAnalysis">
+                            <i class="glyphicon glyphicon-stats icon text-primary-dker"></i>
+                            <span class="font-bold">区域分析</span>
+                        </a>
+                    </li>
+                    <li class="line dk"></li>
+
+
+                </ul>
+                <!-- / list -->
+            </nav>
         </div>
-        <div class="wrapper-md"  ng-if="app.exhibition.dataflag">
+        <div class="wrapper-md m_app-content" ng-if="app.exhibition.dataflag">
             <div class="row">
                 <div class="col-md-3">
                     <div class="panel wrapper" ng-style="app.settings.Panel">
@@ -116,7 +153,6 @@
             </div>
         </div>
         <div data-ng-include=" 'tpl/blocks/loading.html' " ng-show="loading"></div>
-
     </div>
 </div>
 <style>
@@ -135,5 +171,52 @@
         width: 640px;
         height: 610px;
         margin: 0 auto;
+    }
+    *{
+        padding: 0;
+        margin: 0;
+        list-style: none;
+    }
+    .m_list>ul{
+        margin: 0;
+    }
+    .m_list>ul>.m_nav_one{
+        line-height: 50px;
+        text-align: center;
+        border-bottom: 1px solid #efe0e0;
+        position: relative;
+        color: #000;
+    }
+    .m_nav_two>li{
+        border-bottom: 1px solid #e7dddd;
+    }
+    .m_nav_two>li:nth-child(2){
+        border-top: 1px solid #e7dddd;
+    }
+    .m_nav_two>li:nth-child(5){
+        border-bottom: none;
+    }
+    .m_nav_two>li>a{
+        padding: 14px;
+    }
+    .m_nav_two>li>a>span{
+        width: 100%;
+    }
+    .m_left-logo>a>span{
+        font-size: 22px;
+    }
+    .m_left-logo>a>img{
+        display:block;
+        width: 60px;
+        margin: 0 auto;
+    }
+    .m_app-content{
+        margin-left: 210px;
+    }
+    @media screen and (max-width: 767px) {
+        .m_app-content{
+            margin-left: 0px!important;
+            width: 100%;
+        }
     }
 </style>
